[package]
name = "dengine"
version = "0.1.3"
authors = ["hrishi <hrishikesh.mk1@gmail.com>"]
description = "mysql/sqlite abstraction lib"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hrishimk/dengine"
categories = ["database"]

[dependencies]
mysql = "14.1.0"
chrono = "0.4.6"
chrono-tz = "0.5.0"
serde = "1.0.71"
dengine_derive = "0.1.1"
deslite = "0.1.0"