[package]
name = "dengine_derive"
version = "0.1.0"
authors = ["hrishi <hrishikesh.mk1@gmail.com>"]
license = "MIT"
description = "Derive lib for dengine database lib"
repository = "https://github.com/hrishimk/dengine"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.13"
syn = "0.14.9"
quote = "0.6.8"